Use new svg tmplfunc

--- a/tmpl/index.tmpl
+++ b/tmpl/index.tmpl
@@ -30,8 +30,8 @@
   <div id="main-container">
     <div id="dark-mode-switch">
       <button id="dark-mode-switch-btn" aria-label="Dark Mode Switch">
-        {{ file "./svg/fa/solid/sun.svg" | safeHTML }}
-        {{ file "./svg/fa/solid/moon.svg" | safeHTML }}
+        {{ svg "./svg/fa/solid/sun.svg" }}
+        {{ svg "./svg/fa/solid/moon.svg" }}
       </button>
     </div>
 
@@ -50,13 +50,13 @@
 
           <div class="links">
             <a href="mailto:hello@jimmysawczuk.com" class="link email" target="_blank">
-              {{ file "./svg/fa/duotone/paper-plane.svg" | safeHTML }} E-mail
+              {{ svg "./svg/fa/duotone/paper-plane.svg" }} E-mail
             </a>
             <a href="https://section411.com" class="link section411" target="_blank" rel="noopener">
               <div class="logo-img"><img class="section411-logo" alt="Section 411" src="/img/section411-logo.png" /></div> Section 411
             </a>
             <a href="/resume" class="link resume">
-              {{ file "./svg/fa/duotone/address-card.svg" | safeHTML }} Résumé
+              {{ svg "./svg/fa/duotone/address-card.svg" }} Résumé
             </a>
           </div>
         </div>
@@ -64,22 +64,22 @@
       <div class="bottom">
         <div class="links">
           <a href="https://facebook.com/jimmysawczuk" class="link fb" target="_blank" rel="noopener">
-            {{ file "./svg/fa/brands/facebook-f.svg" | safeHTML }} Facebook
+            {{ svg "./svg/fa/brands/facebook-f.svg" }} Facebook
           </a>
           <a href="https://twitter.com/jimmysawczuk" class="link tw" target="_blank" rel="noopener">
-            {{ file "./svg/fa/brands/twitter.svg" | safeHTML }} Twitter
+            {{ svg "./svg/fa/brands/twitter.svg" }} Twitter
           </a>
           <a href="https://t.me/jimmysawczuk" class="link tg" target="_blank" rel="noopener">
-            {{ file "./svg/fa/brands/telegram-plane.svg" | safeHTML }} Telegram
+            {{ svg "./svg/fa/brands/telegram-plane.svg" }} Telegram
           </a>
           <a href="https://instagram.com/jimmysawczuk" class="link instagram" target="_blank" rel="noopener">
-            {{ file "./svg/fa/brands/instagram.svg" | safeHTML }} Instagram
+            {{ svg "./svg/fa/brands/instagram.svg" }} Instagram
           </a>
           <a href="https://linkedin.com/in/jimmysawczuk" class="link linkedin" target="_blank" rel="noopener">
-            {{ file "./svg/fa/brands/linkedin-in.svg" | safeHTML }} LinkedIn
+            {{ svg "./svg/fa/brands/linkedin-in.svg" }} LinkedIn
           </a>
           <a href="https://github.com/jimmysawczuk" class="link github" target="_blank" rel="noopener">
-            {{ file "./svg/fa/brands/github.svg" | safeHTML }} Github
+            {{ svg "./svg/fa/brands/github.svg" }} Github
           </a>
         </div>
       </div>
