--- a/tmpl/resume.tmpl
+++ b/tmpl/resume.tmpl
@@ -26,8 +26,8 @@
 <body>
   <div id="dark-mode-switch">
     <button id="dark-mode-switch-btn" aria-label="Dark Mode Switch">
-      {{ file "./svg/fa/solid/sun.svg" | safeHTML }}
-      {{ file "./svg/fa/solid/moon.svg" | safeHTML }}
+      {{ svg "./svg/fa/solid/sun.svg" }}
+      {{ svg "./svg/fa/solid/moon.svg" }}
     </button>
   </div>
   <div id="content">
