--- a/scss/resume.scss
+++ b/scss/resume.scss
@@ -17,15 +17,15 @@ html {
 :root {
   --text-color: #222;
   --bg-color: #f9f9f9;
-  --header-color: #{darken(#369, 10%)};
-  --link-color: #{darken(#369, 10%)};
+  --header-color: #3b82f6;
+  --link-color: #3b82f6;
   --text-muted-color: #777;
 
   @include dark-mode() {
     --text-color: #f9f9f9;
     --bg-color: #222;
-    --header-color: #{lighten(#369, 20%)};
-    --link-color: #{lighten(#369, 20%)};
+    --header-color: #a3cc00;
+    --link-color: #a3cc00;
     --text-muted-color: #aaa;
   }
 }
@@ -57,7 +57,7 @@ body {
     h2 {
       text-align: center;
       font-weight: normal;
-      margin: 0.25em 0px;
+      margin: 1em 0px 0.5em;
       font-size: 1em;
 
       a {
