--- a/scss/_links.scss
+++ b/scss/_links.scss
@@ -46,7 +46,7 @@
     margin: 0;
     padding: 1em;
     font-size: 1em;
-    border: 1px solid #ddd;
+    border: 1px solid #d1d5db;
 
     &:hover {
       border-color: $lightAccent;
@@ -71,7 +71,7 @@
 
   @include dark-mode() {
     @media (max-width: $cutoff) {
-      border-color: #444;
+      border-color: #4b5563;
     }
   }
 }
@@ -124,21 +124,13 @@
     width: 100%;
   }
 
-  &.email {
-    &:hover {
-      background: #1d4ed8;
-    }
+  &:hover {
+    background: #1e40af;
   }
 
-  &.section411 {
+  @include dark-mode() {
     &:hover {
-      background: #1e5f4b;
-    }
-  }
-
-  &.resume {
-    &:hover {
-      background: #1d4ed8;
+      background: #1e3a8a;
     }
   }
 }
