--- a/scss/resume.scss
+++ b/scss/resume.scss
@@ -15,18 +15,18 @@ html {
 }
 
 :root {
-  --text-color: #222;
-  --bg-color: #f9f9f9;
-  --header-color: #{darken(#369, 10%)};
-  --link-color: #{darken(#369, 10%)};
-  --text-muted-color: #777;
+  --text-color: #1f2937;
+  --bg-color: #f9fafb;
+  --header-color: #1e40af;
+  --link-color: #1e40af;
+  --text-muted-color: #9ca3af;
 
   @include dark-mode() {
-    --text-color: #f9f9f9;
-    --bg-color: #222;
-    --header-color: #{lighten(#369, 20%)};
-    --link-color: #{lighten(#369, 20%)};
-    --text-muted-color: #aaa;
+    --text-color: #f9fafb;
+    --bg-color: #1f2937;
+    --header-color: #60a5fa;
+    --link-color: #60a5fa;
+    --text-muted-color: #6b7280;
   }
 }
 
@@ -57,7 +57,7 @@ body {
     h2 {
       text-align: center;
       font-weight: normal;
-      margin: 0.25em 0px;
+      margin: 1em 0px 0.5em;
       font-size: 1em;
 
       a {
