--- a/tmpl/resume.tmpl
+++ b/tmpl/resume.tmpl
@@ -75,7 +75,7 @@
           </div>
 
           <div class="span hide-mobile">
-            Sept. 2017 – present
+            Sept. 2017 – Feb. 2021
           </div>
 
           <div class="title">
@@ -83,7 +83,7 @@
           </div>
 
           <div class="title-date">
-            Feb. 2020 – present
+            Feb. 2020 – Feb. 2021
           </div>
 
           <div class="title">
