--- a/tmpl/resume.tmpl
+++ b/tmpl/resume.tmpl
@@ -67,6 +67,30 @@
         <h3>Experience</h3>
         <div class="experience">
           <div class="company">
+            Coinbase
+          </div>
+
+          <div class="city">
+            Remote
+          </div>
+
+          <div class="span hide-mobile">
+            Mar. 2021 – present
+          </div>
+
+          <div class="title">
+            Senior Software Engineer
+          </div>
+
+          <div class="title-date">
+            Mar. 2021 – present
+          </div>
+
+          <ul class="extra"></ul>
+        </div>
+        
+        <div class="experience">
+          <div class="company">
             Red Ventures
           </div>
 
