--- a/tmpl/resume.tmpl
+++ b/tmpl/resume.tmpl
@@ -73,13 +73,13 @@
           <div class="city">
             Remote
           </div>
+          
+          <div class="span">
+            Mar. 2021 – present
+          </div>
 
           <div class="title">
             Senior Software Engineer
-          </div>
-
-          <div class="title-date">
-            Mar. 2021 – present
           </div>
 
           <ul class="extra"></ul>
