--- a/tmpl/index.tmpl
+++ b/tmpl/index.tmpl
@@ -15,15 +15,7 @@
   <script>
     {{- file  "public/dist/dark-mode.js" | safeJS -}}
   </script>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-3634519-20', 'auto');
-    ga('send', 'pageview');
-  </script>
+  <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "289e9cf35c8e4348a1bb08c16aec7104"}'></script>
   <meta name="description" content="Jimmy Sawczuk is a software engineer who currently lives and works in Rock Hill, SC." />
 </head>
 <body>
