--- a/tmpl/index.tmpl
+++ b/tmpl/index.tmpl
@@ -45,7 +45,7 @@
               {{ svg "./svg/fa/duotone/paper-plane.svg" }} E-mail
             </a>
             <a href="https://section411.com" class="link section411" target="_blank" rel="noopener">
-              <div class="logo-img"><img class="section411-logo" alt="Section 411" src="/img/section411-logo.png" /></div> Section 411
+              {{ svg "./svg/section411.svg" }} Section 411
             </a>
             <a href="/resume" class="link resume">
               {{ svg "./svg/fa/duotone/address-card.svg" }} Résumé
