--- a/tmpl/index.tmpl
+++ b/tmpl/index.tmpl
@@ -15,18 +15,18 @@
 </head>
 <body class="bg-gray-50 dark:bg-gray-900 transition-colors text-gray-800 dark:text-gray-300 relative">
   <div class="min-h-screen md:grid md:place-content-center">
-    <div class="grid grid-flow-row pb-12 md:pb-0 md:max-w-6xl">
+    <div class="md:grid md:grid-flow-row pb-12 md:pb-0 md:max-w-6xl">
       <div class="p-4 mb-12 md:mb-0 md:grid md:grid-flow-col-dense md:p-12 md:gap-12">
-        <div class="p-8 max-h-80 md:p-0 place-self-center">
+        <div class="md:max-h-80 md:place-self-center content-center">
           <picture>
             <source srcset="{{ asset "/img/headshot.webp" }}" type="image/webp" />
             <source srcset="{{ asset "/img/headshot-rounded.jpg" }}" type="image/jpeg" />
-            <img src="{{ asset "/img/headshot-rounded.jpg" }}" alt="Jimmy Sawczuk" class="max-h-80" />
+            <img src="{{ asset "/img/headshot-rounded.jpg" }}" alt="Jimmy Sawczuk" class="max-h-80 mx-auto" />
           </picture>
         </div>
 
         <div class="text-center">
-          <h1 class="font-title text-5xl font-bold uppercase leading-normal text-transparent bg-clip-text bg-gradient-to-t from-green-400 to-blue-500 dark:from-green-300 dark:to-blue-500 dark:text-shadow-lg transition-all">Jimmy Sawczuk</h1>
+          <h1 class="font-title text-5xl md:text-6xl font-bold uppercase leading-normal text-transparent bg-clip-text bg-gradient-to-t from-green-400 to-blue-500 dark:from-green-300 dark:to-blue-500 dark:text-shadow-lg transition-all my-2">Jimmy Sawczuk</h1>
           <h2 class="text-2xl font-light text-gray-400 dark:text-gray-500 transition-colors">
             <span class="block md:inline-block md:after:inline-block md:after:mx-2 md:after:content-['·']">Software Engineer</span><span class="block md:inline-block">Rock Hill, SC</span>
           </h2>
