--- a/tmpl/resume.tmpl
+++ b/tmpl/resume.tmpl
@@ -18,8 +18,8 @@
         <div class="block sm:inline-block sm:after:inline-block sm:after:mx-2 sm:after:content-['·']"><strong>email</strong> <a href="mailto:hello@jimmysawczuk.com" target="_blank" class="link-std">hello@jimmysawczuk.com</a></div>
         <div class="block sm:inline-block"><strong>web</strong> <a href="https://jimmysawczuk.com" target="_blank" class="link-std">jimmysawczuk.com</a></div>
       </div>
-      <div class="text-5xl md:text-6xl print:text-5xl text-center text-transparent bg-clip-text bg-gradient-to-t from-green-400 to-blue-500 dark:from-green-300 dark:to-blue-500 dark:text-shadow-lg transition-all print:text-blue-500">
-        <h1 class="font-title font-bold uppercase leading-relaxed print:leading-normal">James J. Sawczuk</h1>
+      <div class="text-5xl md:text-6xl print:text-5xl text-center">
+        <h1 class="font-title font-bold uppercase leading-relaxed print:leading-normal text-transparent bg-clip-text brand-gradient dark:text-shadow-lg transition-all print:text-blue-500">James J. Sawczuk</h1>
       </div>
     </div>
 
