--- a/tmpl/index.tmpl
+++ b/tmpl/index.tmpl
@@ -26,7 +26,7 @@
         </div>
 
         <div class="text-center">
-          <h1 class="font-title text-5xl md:text-6xl font-bold uppercase leading-normal text-transparent bg-clip-text bg-gradient-to-t from-green-400 to-blue-500 dark:from-green-300 dark:to-blue-500 dark:text-shadow-lg transition-all my-2 select-none">Jimmy Sawczuk</h1>
+          <h1 class="font-title text-5xl md:text-6xl font-bold uppercase leading-tight brand-gradient text-transparent bg-clip-text dark:text-shadow-lg transition-all my-2 select-none">Jimmy Sawczuk</h1>
           <h2 class="text-2xl font-light text-gray-400 dark:text-gray-500 transition-colors">
             <div class="block md:inline-block md:after:inline-block md:after:mx-2 md:after:content-['·']">Software Engineer</div>
             <div class="block md:inline-block">Rock Hill, SC</div>
