--- a/tmpl/index.tmpl
+++ b/tmpl/index.tmpl
@@ -14,7 +14,7 @@
   <meta name="description" content="Jimmy Sawczuk is a software engineer who currently lives and works in Rock Hill, SC." />
 </head>
 <body class="bg-gray-50 dark:bg-gray-900 transition-colors text-gray-800 dark:text-gray-300 relative">
-  <div class="min-h-screen md:grid md:place-content-center">
+  <div class="min-h-screen md:grid md:place-content-center pb-4">
     <div class="md:grid md:grid-flow-row pb-12 md:pb-0 md:max-w-6xl">
       <div class="p-4 mb-12 md:mb-0 md:grid md:grid-flow-col-dense md:p-12 md:gap-8">
         <div class="md:max-h-80 md:place-self-center content-center min-w-[150px]">
@@ -33,22 +33,22 @@
           </h2>
 
           <div class="mt-8 grid grid-flow-row gap-4 text-left">
-            <a href="mailto:hello@jimmysawczuk.com" class="block md:mx-8 p-4 bg-gray-800 dark:bg-gray-700 hover:bg-blue-700 transition-colors text-gray-50 rounded-md text-lg" target="_blank">
-              <div class="inline-block mr-2 w-6 text-center">{{ svg "./svg/fa/duotone/paper-plane.svg" }}</div>
+            <a href="mailto:hello@jimmysawczuk.com" class="block md:mx-8 p-6 bg-gray-800 dark:bg-gray-700 hover:bg-blue-700 transition-colors text-gray-50 rounded-md text-lg" target="_blank">
+              <div class="inline-block mr-2 w-8 text-center">{{ svg "./svg/fa/duotone/paper-plane.svg" }}</div>
               E-mail
             </a>
-            <a href="https://section411.com" class="block md:mx-8 p-4 bg-gray-800 dark:bg-gray-700 hover:bg-blue-700 transition-colors text-gray-50 rounded-md text-lg" target="_blank" rel="noopener">
-              <div class="inline-block mr-2 w-6 text-center">{{ svg "./svg/section411.svg" }}</div>
+            <a href="https://section411.com" class="block md:mx-8 p-6 bg-gray-800 dark:bg-gray-700 hover:bg-blue-700 transition-colors text-gray-50 rounded-md text-lg" target="_blank" rel="noopener">
+              <div class="inline-block mr-2 w-8 text-center">{{ svg "./svg/section411.svg" }}</div>
               Section 411
             </a>
-            <a href="/resume" class="block md:mx-8 p-4 bg-gray-800 dark:bg-gray-700 hover:bg-blue-700 transition-colors text-gray-50 rounded-md text-lg">
-              <div class="inline-block mr-2 w-6 text-center">{{ svg "./svg/fa/duotone/address-card.svg" }}</div>
+            <a href="/resume" class="block md:mx-8 p-6 bg-gray-800 dark:bg-gray-700 hover:bg-blue-700 transition-colors text-gray-50 rounded-md text-lg">
+              <div class="inline-block mr-2 w-8 text-center">{{ svg "./svg/fa/duotone/address-card.svg" }}</div>
               Résumé
             </a>
           </div>
         </div>
       </div>
-      <div class="sm:grid sm:grid-flow-col sm:grid-rows-2 lg:grid-rows-1 font-light">
+      <div class="grid grid-flow-col grid-rows-3 sm:grid-rows-2 lg:grid-rows-1 font-light">
         <a href="https://facebook.com/jimmysawczuk" class="block px-8 py-4 border border-transparent hover:border-b-[#1877f2] hover:text-[#1877f2] transition-colors whitespace-nowrap sm:text-center" target="_blank" rel="noopener">
           <div class="inline-block w-6 mr-2">
             {{- svg "./svg/fa/brands/facebook-f.svg" -}}
