--- a/tmpl/index.tmpl
+++ b/tmpl/index.tmpl
@@ -9,80 +9,93 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
-  <meta name="msapplication-TileColor" content="#333333">
   <meta name="theme-color" content="#ffffff">
-  <script>
-    {{- file  "public/dist/dark-mode.js" | safeJS -}}
-  </script>
   <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "289e9cf35c8e4348a1bb08c16aec7104"}'></script>
   <meta name="description" content="Jimmy Sawczuk is a software engineer who currently lives and works in Rock Hill, SC." />
 </head>
-<body>
-  <div id="main-container">
-    <div id="dark-mode-switch">
-      <button id="dark-mode-switch-btn" aria-label="Dark Mode Switch">
-        {{ svg "./svg/fa/solid/sun.svg" }}
-        {{ svg "./svg/fa/solid/moon.svg" }}
-      </button>
-    </div>
-
-    <div class="card">
-      <div class="top">
-        <div class="img">
+<body class="bg-gray-50 dark:bg-gray-900 transition-colors text-gray-800 dark:text-gray-300 relative">
+  <div class="min-h-screen md:grid md:place-content-center pb-4">
+    <div class="md:grid md:grid-flow-row pb-12 md:pb-0 md:max-w-6xl">
+      <div class="p-4 mb-12 md:mb-0 md:grid md:grid-flow-col-dense md:p-12 md:gap-8">
+        <div class="md:max-h-80 md:place-self-center content-center min-w-[150px]">
           <picture>
             <source srcset="{{ asset "/img/headshot.webp" }}" type="image/webp" />
             <source srcset="{{ asset "/img/headshot-rounded.jpg" }}" type="image/jpeg" />
-            <img src="{{ asset "/img/headshot-rounded.jpg" }}" alt="Jimmy Sawczuk" />
+            <img src="{{ asset "/img/headshot-rounded.jpg" }}" alt="Jimmy Sawczuk" class="max-h-80 mx-auto" />
           </picture>
         </div>
-        <div class="details">
-          <h1 class="name">Jimmy Sawczuk</h1>
-          <h2 class="title"><span>Software Engineer</span><span>Rock Hill, SC</span></h2>
 
-          <div class="links">
-            <a href="mailto:hello@jimmysawczuk.com" class="link email" target="_blank">
-              {{ svg "./svg/fa/duotone/paper-plane.svg" }} E-mail
+        <div class="text-center">
+          <h1 class="font-title text-5xl md:text-6xl font-bold uppercase leading-tight brand-gradient text-transparent bg-clip-text dark:text-shadow-lg transition-all my-4 md:my-2 select-none">Jimmy Sawczuk</h1>
+          <h2 class="text-2xl font-light text-gray-400 dark:text-gray-500 transition-colors leading-tight">
+            <div class="block md:inline-block md:after:inline-block md:after:mx-2 md:after:content-['·']">Software Engineer</div>
+            <div class="block md:inline-block">Rock Hill, SC</div>
+          </h2>
+
+          <div class="mt-8 grid grid-flow-row gap-4 text-left">
+            <a href="mailto:hello@jimmysawczuk.com" class="block md:mx-8 p-6 bg-gray-800 dark:bg-gray-700 hover:bg-blue-700 transition-colors text-gray-50 rounded-md text-lg" target="_blank">
+              <div class="inline-block mr-2 w-8 text-center">{{ svg "./svg/fa/duotone/paper-plane.svg" }}</div>
+              E-mail
             </a>
-            <a href="https://section411.com" class="link section411" target="_blank" rel="noopener">
-              {{ svg "./svg/section411.svg" }} Section 411
+            <a href="https://section411.com" class="block md:mx-8 p-6 bg-gray-800 dark:bg-gray-700 hover:bg-blue-700 transition-colors text-gray-50 rounded-md text-lg" target="_blank" rel="noopener">
+              <div class="inline-block mr-2 w-8 text-center">{{ svg "./svg/section411.svg" }}</div>
+              Section 411
             </a>
-            <a href="/resume" class="link resume">
-              {{ svg "./svg/fa/duotone/address-card.svg" }} Résumé
+            <a href="/resume" class="block md:mx-8 p-6 bg-gray-800 dark:bg-gray-700 hover:bg-blue-700 transition-colors text-gray-50 rounded-md text-lg">
+              <div class="inline-block mr-2 w-8 text-center">{{ svg "./svg/fa/duotone/address-card.svg" }}</div>
+              Résumé
             </a>
           </div>
         </div>
       </div>
-      <div class="bottom">
-        <div class="links">
-          <a href="https://facebook.com/jimmysawczuk" class="link fb" target="_blank" rel="noopener">
-            {{ svg "./svg/fa/brands/facebook-f.svg" }} Facebook
-          </a>
-          <a href="https://twitter.com/jimmysawczuk" class="link tw" target="_blank" rel="noopener">
-            {{ svg "./svg/fa/brands/twitter.svg" }} Twitter
-          </a>
-          <a href="https://t.me/jimmysawczuk" class="link tg" target="_blank" rel="noopener">
-            {{ svg "./svg/fa/brands/telegram-plane.svg" }} Telegram
-          </a>
-          <a href="https://instagram.com/jimmysawczuk" class="link instagram" target="_blank" rel="noopener">
-            {{ svg "./svg/fa/brands/instagram.svg" }} Instagram
-          </a>
-          <a href="https://linkedin.com/in/jimmysawczuk" class="link linkedin" target="_blank" rel="noopener">
-            {{ svg "./svg/fa/brands/linkedin-in.svg" }} LinkedIn
-          </a>
-          <a href="https://github.com/jimmysawczuk" class="link github" target="_blank" rel="noopener">
-            {{ svg "./svg/fa/brands/github.svg" }} Github
-          </a>
-        </div>
+      <div class="grid grid-flow-col grid-rows-3 sm:grid-rows-2 lg:grid-rows-1 font-light">
+        <a href="https://facebook.com/jimmysawczuk" class="block px-8 py-4 border border-transparent hover:border-b-[#1877f2] hover:text-[#1877f2] transition-colors whitespace-nowrap sm:text-center" target="_blank" rel="noopener">
+          <div class="inline-block w-6 mr-2">
+            {{- svg "./svg/fa/brands/facebook-f.svg" -}}
+          </div>
+          Facebook
+        </a>
+        <a href="https://twitter.com/jimmysawczuk" class="block px-8 py-4 border border-transparent hover:border-b-[#1da1f2] hover:text-[#1da1f2] transition-colors whitespace-nowrap sm:text-center" target="_blank" rel="noopener">
+          <div class="inline-block w-6 mr-2">
+            {{- svg "./svg/fa/brands/twitter.svg" -}}
+          </div>
+          Twitter
+        </a>
+        <a href="https://t.me/jimmysawczuk" class="block px-8 py-4 border border-transparent hover:border-b-[#0088cc] hover:text-[#0088cc] transition-colors whitespace-nowrap sm:text-center" target="_blank" rel="noopener">
+          <div class="inline-block w-6 mr-2">
+            {{- svg "./svg/fa/brands/telegram-plane.svg" -}}
+          </div>
+          Telegram
+        </a>
+        <a href="https://instagram.com/jimmysawczuk" class="block px-8 py-4 border border-transparent hover:border-b-[#e1306c] hover:text-[#e1306c] transition-colors whitespace-nowrap sm:text-center" target="_blank" rel="noopener">
+          <div class="inline-block w-6 mr-2">
+            {{- svg "./svg/fa/brands/instagram.svg" -}}
+          </div>
+          Instagram
+        </a>
+        <a href="https://linkedin.com/in/jimmysawczuk" class="block px-8 py-4 border border-transparent hover:border-b-[#0077b5] hover:text-[#0077b5] transition-colors whitespace-nowrap sm:text-center" target="_blank" rel="noopener">
+          <div class="inline-block w-6 mr-2">
+            {{- svg "./svg/fa/brands/linkedin-in.svg" -}}
+          </div>
+          LinkedIn
+        </a>
+        <a href="https://github.com/jimmysawczuk" class="block px-8 py-4 border border-transparent hover:border-b-[#333] hover:text-[#333] dark:hover:text-gray-50 dark:hover:border-b-gray-50 transition-colors whitespace-nowrap sm:text-center" target="_blank" rel="noopener">
+          <div class="inline-block w-6 mr-2">
+            {{- svg "./svg/fa/brands/github.svg" -}}
+          </div>
+          Github
+        </a>
       </div>
     </div>
   </div>
 
-  <div id="rev">
+  <div class="absolute right-2 bottom-2 text-gray-400 text-sm">
     {{ $rev := getJSON "REVISION.json" -}}
     <a
       href="https://github.com/jimmysawczuk/jimmysawczuk.com/commit/{{ index $rev "hex" "full" }}"
       target="_blank"
       rel="noopener"
+      class="hover:underline"
     >
       {{- printf "rev. %s" (index $rev "hex" "short") -}}
     </a>
